--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/gonAlmiron/sistema-gestion#readme",
   "dependencies": {
     "axios": "^1.3.3",
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
