--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-google-oidc": "^0.1.0",
     "passport-local": "^1.0.0",
     "qrcode": "^1.5.1",
     "react-icons": "^4.7.1",
