--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/preset-env": "^7.20.2",
     "jest": "^29.4.3",
     "nodemon": "^2.0.20",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1"
   }
 }
