--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-session": "^1.17.3",
     "graphql": "^15.8.0",
     "log4js": "^6.7.1",
+    "mongodb": "^5.3.0",
     "mongoose": "^6.8.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.1",
